--- a/src/routes/Home.module.scss
+++ b/src/routes/Home.module.scss
@@ -25,7 +25,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 400px;
+    height: 75vh;
   
     padding: 20px;
 
